Compositing: Multiply node for Render + AO gives an unexpected result on background #95244

Closed
opened 2022-01-27 08:20:25 +01:00 by Eugene Du · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: 2.93

Short description of error
Multiply node for AO + Render gives high exposure (?) on background in compositing.

Exact steps for others to reproduce the error

result in 3.0.0 compositing.png result in 2.93 compositing_2.93.png
raw render in 3.0.0 render.png raw render in 2.93 render_2.93.png
AO in 3.0.0 AO.png AO in 2.93 AO_2.93.png

Test file for 3.0.0:
Compositing_Multiply_is_Broken.blend

Test file for 2.93:
Compositing_Multiply_Works_2.93.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: 2.93 **Short description of error** Multiply node for AO + Render gives high exposure (?) on background in compositing. **Exact steps for others to reproduce the error** |result in 3.0.0 ![compositing.png](https://archive.blender.org/developer/F12826980/compositing.png)|result in 2.93 ![compositing_2.93.png](https://archive.blender.org/developer/F12826983/compositing_2.93.png)| | -- | -- | |raw render in 3.0.0 ![render.png](https://archive.blender.org/developer/F12826985/render.png)|raw render in 2.93 ![render_2.93.png](https://archive.blender.org/developer/F12826989/render_2.93.png)| |AO in 3.0.0 ![AO.png](https://archive.blender.org/developer/F12826991/AO.png)|AO in 2.93 ![AO_2.93.png](https://archive.blender.org/developer/F12826993/AO_2.93.png)| Test file for 3.0.0: [Compositing_Multiply_is_Broken.blend](https://archive.blender.org/developer/F12826978/Compositing_Multiply_is_Broken.blend) Test file for 2.93: [Compositing_Multiply_Works_2.93.blend](https://archive.blender.org/developer/F12827013/Compositing_Multiply_Works_2.93.blend)
Author

Added subscriber: @APEC

Added subscriber: @APEC
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this bug with the files provided.

A note for others, this issue is related to how AO pass behaves when the scene contains the new Cycles-X shadow catcher.

Tested Blender Version: 3.1.0 Alpha, branch: master, commit date: 2022-01-25 23:03, hash: c4bedeb018

I can confirm this bug with the files provided. A note for others, this issue is related to how AO pass behaves when the scene contains the new Cycles-X shadow catcher. Tested Blender Version: 3.1.0 Alpha, branch: master, commit date: 2022-01-25 23:03, hash: `c4bedeb018`
Author

Also, sorry if I should fill another report. It also related to the Shadow Catcher.
If we resize shadow catcher plane behind Suzanne and turn on Shadow Catcher pass,
we will got transparent background on raw render.
If we do not resize that plane, we will got whole BG transparent.
with_SC_pass.png
Shadow_Catcher_Pass.mp4

Also, sorry if I should fill another report. It also related to the Shadow Catcher. If we resize shadow catcher plane behind Suzanne and turn on Shadow Catcher pass, we will got transparent background on raw render. If we do not resize that plane, we will got whole BG transparent. ![with_SC_pass.png](https://archive.blender.org/developer/F12827229/with_SC_pass.png) [Shadow_Catcher_Pass.mp4](https://archive.blender.org/developer/F12827234/Shadow_Catcher_Pass.mp4)
Author

The first part of the task "Multiply node for Render" can be solved with placing default "Color Ramp" (which logically shouldn't change anything for the output pass)

3.3.0 CR off.png 3.3.0 CR on.png
The first part of the task "Multiply node for Render" can be solved with placing default "Color Ramp" (which logically shouldn't change anything for the output pass) |![3.3.0 CR off.png](https://archive.blender.org/developer/F13587202/3.3.0_CR_off.png)|![3.3.0 CR on.png](https://archive.blender.org/developer/F13587206/3.3.0_CR_on.png)| | -- | -- |

This issue was referenced by 4546e35c92

This issue was referenced by 4546e35c92022997dacc322c8ab43df23bf98ca3
Lukas Stockner self-assigned this 2023-01-08 23:10:33 +01:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95244
No description provided.