Fix T95244: Cycles produces incorrect AO pass for shadow catchers

Differential Revision: https://developer.blender.org/D16951